# siglib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SetEnv.bat  SetEnv.sh  SetEnvRPi.sh  configure.bat  configure.sh  configureRPi.sh  license.html  setup_cywin.bat  welcome.html
AppNotes/: FixedPointFFT.c  LabView.txt  index.html
AudioFiles/: aa.sig  ee.sig  er.sig  i.sig  readme.txt  s.sig
Benchfft/: Clf62x.bat  Clf64x.bat  Clf67x.bat  ClfMSVC.bat  Clfgcc.bat  Siminit4.cmd  benchfft.c  benchfft.dsw  benchfft.mak  clf40.bat  lnk4x.cmd  lnkc6x.cmd  proj.err  readme.txt  run6x.bat  siminit6.cmd
C_utils/: LICENSE  README.md  circular_buffer.h  circular_buffer_integer_test.c  circular_buffer_string_test.c  fifo_mutex_Dekker_test.c  fifo_mutex_Peterson_test.c  mutex.h  mutex_Dekker_test.c  mutex_Peterson_test.c
ChBuild/: pkgcreate.ch  readme.txt
Examples/: index.html
Python_utils/: CMSIS-DSP_testdsp.ipynb  DSP_Examples.ipynb  FIR_Filters.ipynb  Farrow_Structure_Model.ipynb  Kalman_1D_pos_speed.ipynb  README.md  best_model.h5  csv_column_to_wav.py  rg1  s-plane_poles_and_zeros.ipynb  spectrogram_simple.py  tsc.tflite  tsc_quant.tflite  wav2csv.py  wav_file_ml_pre_process_and_cnn.ipynb  wav_file_ml_pre_process_and_cnn.py  wav_spectrogram.py  wav_spectrogram_interactive.py
SWIG/: cleanup.sh  siglib_wrap.c#.i  siglib_wrap.i  siglib_wrap.java.i  siglib_wrap.py  siglib_wrap.python.i  swigc#.bat  swigjava.bat  swigjavaAndroid.sh  swigperl.bat  swigpython.bat  swigpython.sh  typemaps.c#.i  typemaps.i  typemaps.perl5.i
SpeechFiles/: oo.sig  (+1 more)
(+1033 files in other folders)
