cmake_minimum_required(VERSION 3.26)

project(siglib LANGUAGES CXX C)

set(SIGLIB_BASE_DIR ${CMAKE_CURRENT_LIST_DIR})
set(SRC_DIR ${SIGLIB_BASE_DIR}/src)

file(GLOB_RECURSE SIGLIB_SRCS
	${SRC_DIR}/*.c
	${SRC_DIR}/*.h)

ADD_DEFINITIONS(-DSIGLIB_STATIC_LIB=1)
#ADD_DEFINITIONS(-DSIGLIB_DATA_FLOAT=1)
add_compile_options( -DSIGLIB_DATA_FLOAT=1 )

#string(REPLACE "/O2" "/Od" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
#string(REPLACE "/Ob1" "/Ob0" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})

add_library( siglib STATIC ${SIGLIB_SRCS} )
target_include_directories(siglib PUBLIC ${SIGLIB_BASE_DIR}/include)
